--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-socket.io": "^11.0.7",
     "@nestjs/websockets": "^11.0.7",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.9.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -53,6 +55,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
